--- a/hc-09-FlexBox-project/style.css
+++ b/hc-09-FlexBox-project/style.css
@@ -20,7 +20,6 @@ body {
   border-radius: 1.5rem;
   box-shadow: 5px 5px 10px black;
   overflow: hidden;
-
 }
 
 /*! ICONBAR */
@@ -34,7 +33,6 @@ body {
   flex-wrap: wrap;
   padding: 10px 50px;
   border-bottom: 2px solid #d9d9d9;
-
 }
 
 .input-part {
@@ -98,24 +96,272 @@ body {
 }
 
 .support-number {
-    font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .support-text {
-    font-size: 1rem;
+  font-size: 1rem;
 }
-
 
 /*! NAVBAR */
 
-.navbar{
-border: 2px solid red;
+.navbar {
+  /* border: 2px solid red; */
+  display: flex;
+  padding: 10px 50px;
+  gap: 2rem;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-.button{
+.button {
+  /* border: 2px solid blue; */
+  background-color: #d9d9d9;
+  display: flex;
+  align-items: center;
+  width: 310px;
+  height: 45px;
+  gap: 1rem;
+  padding: 1rem;
+  border-radius: 5px;
+  font-style: italic;
+}
+
+.nav {
+  /* border: 2px solid blue; */
+  display: flex;
+  gap: 1rem;
+  list-style-type: none;
+  flex-wrap: wrap;
+  font-size: 1.5rem;
+}
+/*! HEADER */
+
+header {
+  /* border: 2px solid red; */
+  display: flex;
+  justify-content: space-around;
+  padding: 1rem 5rem;
+  gap: 1rem;
+  background-image: url(./images/stock.jpg);
+  flex-wrap: wrap;
+}
+
+.essential {
+  background-color: #d5dee5;
+  box-shadow: 5px 5px 10px black;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
 
 }
 
-.nav{
+.essential-text {
+  font-size: 1.5rem;
+  font-style: italic;
+  line-height: 1;
+  letter-spacing: 0.3px;
+  padding: 20px;
+}
 
+.sofa img {
+  width: 100%;
+}
+
+.lighting {
+  background-color: #ffc868;
+  width: 400px;
+  height: 300px;
+  border-radius: 5px;
+  overflow: hidden;
+  position: relative;
+  box-shadow: 5px 5px 10px black;
+}
+.lighting img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+.light {
+  /* border: 2px solid red; */
+  width: 80%;
+  /* float: right;
+    margin-top: 50px; */
+  position: absolute;
+  right: 10px;
+  top: 50px;
+  padding: 1rem;
+}
+
+/*! CATEGORY */
+
+.categorySection {
+  background-color: #a09382;
+}
+
+.categoryPart {
+  padding: 2rem;
+  font-size: 1.5rem;
+}
+
+.categories {
+  /* border: 2px solid red; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.category {
+  background-color: #e5e2df;
+  width: 20rem;
+  height: 20rem;
+  margin: 1rem;
+  padding: 1rem 2px 1rem 1rem;
+  border-radius: 10px;
+  box-shadow: 2px 2px 20px black;
+  font-family: "Josefin Slab", serif;
+}
+
+.category img {
+  width: 100%;
+  height: 100%;
+  padding: 1rem 10px 1rem 1rem;
+  object-fit: cover;
+  border-radius: 2rem;
+}
+
+/*! PRODUCT */
+
+.productSection {
+  background-color: #eeecec;
+}
+
+.productPart {
+  padding: 2rem;
+  font-size: 1.5rem;
+}
+
+.products {
+  /* border: 2px solid red; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.product {
+  margin: 1rem;
+  width: 20rem;
+  height: 20rem;
+  text-align: center;
+  box-shadow: 2px 2px 20px black;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
+.product img {
+  width: 100%;
+  height: 90%;
+  object-fit: cover;
+}
+/*! CONTACT */
+
+.contact {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+  align-items: center;
+  background-color: #aea08d;
+  padding: 1rem;
+}
+
+.expert {
+  background-color: inherit;
+  width: 50%;
+}
+
+.lookforExpert {
+  font-family: "Bellota", system-ui;
+  font-size: 2rem;
+}
+
+.leaveInfo {
+  line-height: 1.5;
+}
+
+span {
+  color: #f37705;
+}
+
+.formSection {
+  /* border: 2px solid red; */
+  /* background-color: purple; */
+  width: 40%;
+  font-size: 1.5rem;
+}
+
+.formElement {
+    margin: 1.5rem 0;
+}
+.formElement input {
+    width: 100%;
+    padding: 0.5rem 0;
+    border: none;
+    background-color: inherit;
+    border-bottom: 1px solid black;
+}
+
+.formElement input:focus{
+    outline: none;
+    background-color: #7f7261;
+}
+.formElement label {
+    font-size: 1.8rem;
+}
+
+
+.submit{
+    padding: 1rem;
+    border-radius: 5px;
+    border: 1px solid black;
+    outline: none;
+    width: 13rem;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-style: italic;
+    margin-left: 1rem;
+}
+
+/*! FOOTER */
+
+footer{
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem;
+
+}
+
+.copyright{
+
+    /* background-color: blue; */
+
+}
+
+.policy{
+/* background-color: yellow; */
+display: flex;
+gap: 1rem;
+}
+
+.policy a{
+    color: black;
+    text-decoration: none;
+    border-bottom: 1px solid black;
 }
