--- a/html-css/hc14-Boostrap-2/css/style.css
+++ b/html-css/hc14-Boostrap-2/css/style.css
@@ -142,13 +142,12 @@ section#about .btn{
 /*                                 MEET PEOPLE                                */
 /* -------------------------------------------------------------------------- */
 section#people{
-    height: 700px;
     background-color: var(--section-color);
 }
 
 section#people .container{
     background-color: var(--secondary-color);
-    padding:1rem;
+    padding:2rem 1rem;
 }
 
 section#people .card{
@@ -175,4 +174,60 @@ section#people .card i{
 
 section#people .card i:hover{
 opacity:0.5;
+}
+/* -------------------------------------------------------------------------- */
+/*                                  OUR MENU                                  */
+/* -------------------------------------------------------------------------- */
+section#menu{
+    background-color:var(--secondary-color);
+  
+}
+
+section#menu .menu-header{
+    color:var(--primary-color)
+}
+
+section#menu .container{
+    background-color: var(--primary-color);
+}
+
+section#menu button{
+    background-color: var(--secondary-color);
+    margin-right: 1rem;
+}
+
+/* -------------------------------------------------------------------------- */
+/*                                   CONTACT                                  */
+/* -------------------------------------------------------------------------- */
+
+section#contact{
+  
+    background:linear-gradient(to bottom,rgba(0,0,0,0.7),rgba(188, 108, 37,0.5)) , url("../img/slider2.jpg")
+}
+
+section#contact input,
+section#contact textarea{
+    background-color: inherit;
+}
+section#contact input:focus,
+section#contact textarea:focus{
+    background-color: var(--primary-color)
+}
+
+label{
+    color:white;
+}
+
+input::placeholder{
+    color:white !important;
+}
+
+textarea{
+    resize:none;
+    height: 100px !important;
+}
+
+.google-map{
+    filter:grayscale(100%);
+    border-radius:1.5rem;
 }
