--- a/html-css/hc14-Boostrap-2/css/style.css
+++ b/html-css/hc14-Boostrap-2/css/style.css
@@ -231,3 +231,11 @@ textarea{
     filter:grayscale(100%);
     border-radius:1.5rem;
 }
+
+/* -------------------------------------------------------------------------- */
+/*                                   FOOTER                                   */
+/* -------------------------------------------------------------------------- */
+
+footer{
+    background-color: var(--primary-color);
+}
